# jira-helper

./: .env.example  .gitignore  README.md  jira_cli.py  mcp_server.py  pyproject.toml  requirements.txt
config/: README.md  required_fields.json
docs/: MCP_REQUIRED_FIELDS.md
